Fix header overlapping content

--- a/src/components/NavBar.module.css
+++ b/src/components/NavBar.module.css
@@ -3,6 +3,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 15px 10px 0 10px;
+  width: 100%;
   background-color: rgba(0, 0, 0, 0.432);
 }
 
